--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -1,10 +1,20 @@
 /*-------------------------------*/
 /* Reusable Componenets*/
 /*-------------------------------*/
-.row{
+.row
+{
     max-width: 1140px;
-    margin: 0 auto;
-    
+    margin: 0 auto;   
+}
+
+section 
+{
+    padding: 80px 0;
+}
+
+.box
+{
+   padding: 1%; 
 }
 
 /*-------------------------------*/
@@ -16,7 +26,8 @@
     box-sizing: border-box;
 }
 
-html{
+html
+{
     background-color: #fff;
     color:#555;
     font-family: "Lato","Arial",sans-serif;
@@ -29,7 +40,8 @@ html{
 /* Header */
 /*-------------------------------*/
 
-header{
+header
+{
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
     height: 100vh;
     background-size: cover;
@@ -39,32 +51,68 @@ header{
 /*-------------------------------*/
 /* Headings */
 /*-------------------------------*/
-h1{
+
+/* Section , Header Combined properties*/
+h1,h2,h3
+{
+    font-weight: 300;
+    text-transform: uppercase;
+}
+/*Header Heading Properties*/
+h1
+{
     margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
     font-size: 240%;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
     word-spacing: 4px;
     
 }
-.hero-text-box{
+
+.hero-text-box
+{
     position: absolute;
     width: 1140px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%)
+    transform: translate(-50%,-50%);
+    letter-spacing: 1px;
 } 
 
+/*Section Features Heading Properties*/
+h2
+{
+    font-size: 180%;
+    word-spacing: 2PX;
+    text-align: center;
+    margin-bottom: 30px;
+}
+h3
+{
+    font-size: 110%;
+    margin-bottom: 15px;
+    
+}
+
+h2:after 
+{
+    display: block;
+    height: 2px;
+    background-color: #e67e22;
+    content: " ";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
+    
+}
 
 /*-------------------------------*/
 /* Buttons*/
 /*-------------------------------*/
 
 .btn:link, 
-.btn:visited {
+.btn:visited 
+{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -74,63 +122,69 @@ h1{
 
 }
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited 
+{
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
     margin-right: 15px;
 }
 .btn-ghost:link, 
-.btn-ghost:visited {
+.btn-ghost:visited 
+{
     border: 1px solid #e67e22;
     color: #e67e22;
 }
 
 .btn:hover,
-.btn:active{
+.btn:active
+{
     background-color: #cf6d17;
     color: #fff;
 }
 .btn-full:hover,
-.btn-full:acitve {
+.btn-full:acitve 
+{
     border: 1px solid #cf6d17;
    
 }
 .btn-ghost:hover, 
-.btn-ghost:active  {
+.btn-ghost:active  
+{
     border: 1px solid #cf6d17;
     color: #fff;
 }
-
-
-
 
 
 /*-------------------------------*/
 /* Logo & Navigation */
 /*-------------------------------*/
 
-.logo{
+.logo
+{
     height: 100px;
     width: auto;
     float: left;
     margin-top: 15px;
 }
 
-.main-nav{
+.main-nav
+{
     float: right;
     list-style: none;
     margin-top: 50px;
 }
 
-.main-nav li {
+.main-nav li 
+{
     display: inline-block;
     margin-left: 40px;
      
 }
 
 .main-nav li a:link, 
-.main-nav li a:visited {
+.main-nav li a:visited 
+{
     padding: 8px 0px;
     color: #fff;
     text-decoration: none;
@@ -140,9 +194,37 @@ h1{
 }
 
 .main-nav li a:hover, 
-.main-nav li a:active {
+.main-nav li a:active 
+{
     border-bottom: 2px solid #e67e22;
     transition: border-bottom 0.4s;
 }
 
+/*-------------------------------*/
+/* Section Paragraphs */
+/*-------------------------------*/
 
+.long-copy 
+{
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+}
+
+.box p 
+{
+    font-size: 90%;
+    line-height: 145%;
+    
+}
+
+/*-------------------------------*/
+/* Section Icons */
+/*-------------------------------*/
+.icon-big 
+{
+    font-size: 350%;
+    display: block;
+    color: #e67e22;
+    margin-bottom: 10px;
+}
