--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -56,6 +56,7 @@ header
     height: 100vh;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 /*-------------------------------*/
@@ -131,6 +132,7 @@ h2:after
     transition: background-color 0.3s, border 0.3s, color 0.3s;
 
 }
+
 .btn-full:link,
 .btn-full:visited 
 {
@@ -139,6 +141,7 @@ h2:after
     color: #fff;
     margin-right: 15px;
 }
+
 .btn-ghost:link, 
 .btn-ghost:visited 
 {
@@ -152,12 +155,14 @@ h2:after
     background-color: #cf6d17;
     color: #fff;
 }
+
 .btn-full:hover,
 .btn-full:acitve 
 {
     border: 1px solid #cf6d17;
    
 }
+
 .btn-ghost:hover, 
 .btn-ghost:active  
 {
@@ -417,4 +422,56 @@ a:hover, a:active
     color: #555;
     border-bottom: 1px solid transparent;
     
+}
+
+/*-----------------------------------------------------*/
+/* Customer-Testimonials*/
+/*-----------------------------------------------------*/
+
+.section-testimonials
+{
+    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color: #fff;
+    background-attachment: fixed;
+    
+}
+
+blockquote:before
+{
+    display: block;
+    content: "\201C";
+    font-weight: bold;
+    font-size: 500%;
+    position: absolute;
+    top: -5px;
+    left: -5 px;;
+    
+}
+
+blockquote
+{
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+cite
+{
+    display: block;
+    font-size: 90%;
+    margin-top: 25px;
+    
+}
+
+
+
+cite img
+{
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
