--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -445,7 +445,7 @@ blockquote:before
     font-size: 500%;
     position: absolute;
     top: -5px;
-    left: -5 px;;
+    left: -5px;;
     
 }
 
@@ -475,3 +475,75 @@ cite img
     margin-right: 10px;
     vertical-align: middle;
 }
+
+
+
+/*-----------------------------------------------------*/
+/* Price Plans*/
+/*-----------------------------------------------------*/
+
+.section-plans
+{
+    background-color: #f4f4f4;
+}
+
+.plan-box
+{
+    background-color: #fff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.plan-box div
+{
+    padding: 15px;
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.plan-box ul
+{
+    list-style: none;
+}
+
+.plan-box ul li
+{
+    padding: 5px 0;
+}
+
+.plan-box div:last-child
+{
+    text-align: center;
+    border: none;
+}
+
+.plan-box div:first-child
+{
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.plan-price
+{
+    font-size: 300%;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: #e67e22;
+}
+
+.plan-price-meal
+{
+   font-size: 80%;
+    
+}
+
+.plan-price-meal span
+{
+    font-size: 30%;
+    font-weight: 300;
+    
+}
+
+
