--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -122,7 +122,8 @@ h2:after
 /*-------------------------------*/
 
 .btn:link, 
-.btn:visited 
+.btn:visited,
+input[type=submit]
 {
     display: inline-block;
     padding: 10px 30px;
@@ -134,7 +135,8 @@ h2:after
 }
 
 .btn-full:link,
-.btn-full:visited 
+.btn-full:visited,
+input[type=submit]
 {
     background-color: #e67e22;
     border: 1px solid #e67e22;
@@ -150,14 +152,16 @@ h2:after
 }
 
 .btn:hover,
-.btn:active
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active,
 {
     background-color: #cf6d17;
     color: #fff;
 }
 
 .btn-full:hover,
-.btn-full:acitve 
+.btn-full:acitve
 {
     border: 1px solid #cf6d17;
    
@@ -547,3 +551,38 @@ cite img
 }
 
 
+/*-----------------------------------------------------*/
+/* Form*/
+/*-----------------------------------------------------*/
+
+
+.contact-form
+{
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text], input[type=email], select, textarea
+{
+    width: 100%;
+    padding: 8px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea
+{
+    height: 110px;
+}
+
+
+input[type=checkbox]
+{
+    margin: 10px 5px 10px 0;
+}
+
+/* To remove the blue border*/
+*:focus
+{
+    outline: none;
+}
