--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -586,3 +586,102 @@ input[type=checkbox]
 {
     outline: none;
 }
+
+
+
+/*-------------------------------*/
+/* FOOTER*/
+/*-------------------------------*/
+
+footer
+{
+    background-color: #333;
+    padding: 40px;
+    font-size: 80%;
+}
+
+footer p
+{
+    color: #888;
+    text-align: center;
+    font-size: 90%;
+    margin-top: 20px;
+}
+
+.footer-nav
+{
+    list-style: none;
+    float: left;
+}
+.social-links{
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-links li
+{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child
+{
+    margin: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited
+{
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.4s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active
+{
+    color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited
+{
+    font-size: 160%;
+}
+
+.ion-social-facebook:hover,
+.ion-social-facebook:active
+{
+    color: #3b5998;
+}
+
+.ion-social-twitter:hover,
+.ion-social-twitter:active
+{
+    color: #38A1F3;
+}
+
+.ion-social-googleplus:hover,
+.ion-social-googleplus:active
+{
+    color: #db4a39;
+}
+
+.ion-social-instagram:hover,
+.ion-social-instagram:active
+{
+    color: #3f729b;
+}
+
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-googleplus,
+.ion-social-instagram
+{
+    transition: color 0.4s;
+}
