--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -130,7 +130,7 @@ input[type=submit]
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
-    transition: background-color 0.3s, border 0.3s, color 0.3s;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
 
 }
 
@@ -161,15 +161,18 @@ input[type=submit]:active,
 }
 
 .btn-full:hover,
-.btn-full:acitve
+.btn-full:active
 {
+    background-color: #cf6d17;
     border: 1px solid #cf6d17;
+        
    
 }
 
 .btn-ghost:hover, 
 .btn-ghost:active  
 {
+    background-color: #cf6d17;
     border: 1px solid #cf6d17;
     color: #fff;
 }
