--- a/Omnifood Project/resources/queries.css
+++ b/Omnifood Project/resources/queries.css
@@ -1,4 +1,32 @@
 
 
+/* Big tablet to Max-Width: from 1023px to 1200px */
+@media only screen and (max-width: 1200px)
+{
+    .hero-text-box
+{
+    width: 100%;
+    padding: 0 2%;
+} 
+}
 
-@media only screen and (max-width: 280px)
+
+
+/* Small tablet to big tablets: from 768px to 1023px */
+@media only screen and (max-width: 1023px)
+{
+    
+}
+
+
+/* Small phones to small tablets: from 481px to 767px */
+@media only screen and (max-width: 767px)
+{
+    
+}
+
+/*Small Phones: from 0 to 480px */
+@media only screen and (max-width: 480px)
+{
+    
+}
