--- a/Omnifood Project/resources/css/style.css
+++ b/Omnifood Project/resources/css/style.css
@@ -154,7 +154,7 @@ input[type=submit]
 .btn:hover,
 .btn:active,
 input[type=submit]:hover,
-input[type=submit]:active,
+input[type=submit]:active
 {
     background-color: #cf6d17;
     color: #fff;
